tests/bad/unary_expr.glaz
fn main() {
  let d = 10;
  _ = !d;
  let unsigned: u8 = 1;
  _ = -unsigned;
}
